openshift/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: nginx-example
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: nginx-example
