openshift/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-example
spec:
  to:
    kind: Service
    name: nginx-example
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
